# Waveshare_ST25R3911B_NFC_Board

./: .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  README.md  STM32F103RBTx_FLASH.ld  download.sh  epd-demo.ioc
Inc/: demo.h  ffconf.h  main.h  rfal_defConfig.h  rfal_platform.h  spi.h  stm32f1xx_it.h  tim.h  usart.h  user_diskio.h
MDK-ARM/: epd-demo.uvoptx  epd-demo.uvprojx
MDK-ARM/epd-demo/: epd-demo.build_log.htm  epd-demo.htm  epd-demo.lnp
Middlewares/ST/rfal/: .gitattributes  CMakeLists.txt
Middlewares/ST/rfal/Src/: rfal_rfst25r3911.c
Middlewares/ST/st25r_common/: CMakeLists.txt
Middlewares/ST/st25r_common/firmware/STM/STM32/Inc/: logger.h
Middlewares/ST/st25r_common/firmware/STM/STM32/Src/: logger.c  timer.c
Src/: demo.c  fatfs.c  gpio.c  main.c  spi.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  tim.c  usart.c  user_diskio.c
User/BSP/: GUI_Paint.c
User/Browser/: Browser.c  Browser.h
User/Config/: Debug.h
User/SDcard/: SD_Card_APP.c  SD_Card_APP.h
cmake/: flash_mcu.jlink.in  gcc-arm-none-eabi.cmake  gdb-helper.cmake  launch.json.in
cmake/stm32cubemx/: CMakeLists.txt
device/: erase_mcu.jlink  flash_mcu.jlink  reset_mcu.jlink
