if ("${MIDDLEWARE_NAME}" STREQUAL "")
    get_filename_component(MIDDLEWARE_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
endif()

set(MIDDLEWARE_PROJECT_NAME ${MIDDLEWARE_NAME})
project(${MIDDLEWARE_PROJECT_NAME})

add_library(${MIDDLEWARE_PROJECT_NAME} INTERFACE)

file(GLOB MIDDLEWARE_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/firmware/STM/STM32/Src/*.c
)

set(MIDDLEWARE_INCLUDE_DIRS
    ${CMAKE_CURRENT_SOURCE_DIR}/firmware/STM/STM32/Inc
    ${CMAKE_CURRENT_SOURCE_DIR}/firmware/STM/utils/Inc
)

target_compile_definitions(${MIDDLEWARE_PROJECT_NAME} INTERFACE
    ST25R3911
    USE_LOGGER=LOGGER_ON
)

target_sources(${MIDDLEWARE_PROJECT_NAME} INTERFACE ${MIDDLEWARE_SOURCES})

target_include_directories(${MIDDLEWARE_PROJECT_NAME} INTERFACE ${MIDDLEWARE_INCLUDE_DIRS})

target_link_libraries(${MIDDLEWARE_PROJECT_NAME} INTERFACE stm32cubemx)